<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:id="@+id/">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAlignment="center"
            android:text="@string/my_name"
            android:id="@+id/"
            android:textSize="36dp"
            android:textColor="@color/primary_dark_material_dark" />

        <Button
            android:id="@+id/about_button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/about_button"
            android:textSize="24dp" />

        <Button
            android:id="@+id/error_button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/error_button"
            android:textSize="24dp" />

        <Button
            android:id="@+id/sudoku_button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/sudoku_button"
            android:textSize="24dp" />

        <Button
            android:id="@+id/quit_button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/quit_button"
            android:textSize="24dp" />

        </LinearLayout>



</LinearLayout>
